--- a/style.css
+++ b/style.css
@@ -11828,7 +11828,7 @@ section.c-sponsor-block.sponsor-paid-wrapper {
     width: 100%; }
     @media (min-width: 820px) {
       section.c-sponsor-block.sponsor-paid-wrapper .sponsor-col-paid {
-        width: 50%; } }
+        width: 48%; } }
     @media (min-width: 820px) {
       section.c-sponsor-block.sponsor-paid-wrapper .sponsor-col-paid.sponsor-col-image {
         padding-left: 18px; } }
